fix: поправляет gap в регионах

--- a/src/components/blocks/heading/heading.module.scss
+++ b/src/components/blocks/heading/heading.module.scss
@@ -23,7 +23,7 @@
     padding: 122px 0 0 64px;
 
     @include vp-1023 {
-      padding: 76px 0 0 35px;
+      padding: 128px 0 0 35px;
     }
 
     @include vp-767 {
