--- a/src/components/blocks/сontinent-sorting/сontinent-sorting.module.scss
+++ b/src/components/blocks/сontinent-sorting/сontinent-sorting.module.scss
@@ -68,7 +68,7 @@
     list-style: none;
 
     @include vp-1023 {
-      gap: 24px;
+      gap: 14px;
     }
 
     @include vp-767 {
